--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,7 @@ img{
 
 .header{
   min-height: 10rem;
-  background-image: url(./img/hero.jpg);
+  background-image: url(./img/heroC.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -140,6 +140,7 @@ img{
 
 .telefono{
   display: flex;
+  font-family: var(--fuenteSecundaria);
 }
 
 .telefono::before{
@@ -193,6 +194,7 @@ img{
 
 .slogan{
   text-align: center;
+  padding-bottom: 50px;
 }
 
 @media (min-width: 768px){
@@ -214,6 +216,7 @@ img{
 .slogan p{
   margin: 0;
   line-height: 1;
+  font-family: var(--fuentePrincipal);
 }
 
 
