--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   --fuenteTerciaria: 'Playfair Display', serif;
   --fuentePrincipal: 'Raleway', sans-serif;
   --fuenteSecundaria: 'Roboto', sans-serif;
+  --cursiva: 'Square Peg', cursive;
 }
 
 
@@ -90,7 +91,7 @@ img{
 
 @media (min-width: 768px){
   .header{
-    max-height: 20rem;
+    max-height: 25rem;
   }
   
 }
@@ -101,21 +102,40 @@ img{
 .contenido-header{
   display: flex;
   flex-direction: column;
-  height: 700px;
-  justify-content: space-between;
+  height: 600px;
+  justify-content: space-around;
   color: white;
+  
+}
+
+@media (min-width: 768px){
+  .contenido-header{
+    height: 20rem;
+  }
+}
+
+@media (min-width: 1200px){
+  .contenido-header{
+    height: 30rem;
+  }
 }
 
 .nombre-sitio{
   font-weight: 400;
   text-align: center;
   font-size: 1.9rem;
-  padding-top: 2rem;
+  padding-top: 1rem;
 }
 
 @media (min-width: 768px){
   .nombre-sitio{
-    font-size: 4rem;
+    font-size: 2rem;
+  }
+}
+
+@media (min-width: 1200px){
+  .nombre-sitio{
+    font-size: 3rem;
   }
 }
 
@@ -127,17 +147,19 @@ img{
   .barra{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center;  
   }
 }
 
+
+
 .contacto{
-  
   display: flex;
   margin-top: 0;
   padding-top: 0;
   flex-direction: column;
   align-items: center;
+   
 }
 
 
@@ -189,8 +211,16 @@ img{
 
 @media (min-width: 768px){
   .navegacion a{
-    padding:.2rem 1rem;
+     font-size: 1rem;
+     padding: .2rem ;
+  }
+}
 
+
+@media (min-width: 1200px){
+  .navegacion a{
+    padding:.2rem 1rem;
+    font-size: 1.5rem;
   }
 }
 
@@ -225,14 +255,35 @@ img{
 
 @media (min-width: 768px){
   .slogan h1{
-    font-size: 4rem;
+    font-size: 2rem;
+    margin-top: 2rem;
+    color: rgba(240, 238, 238, 0.5);
+  }
+}
+
+@media (min-width: 1200px){
+  .slogan h1{
+    margin-top: 0;
+    
   }
 }
 
 .slogan p{
   margin: 0;
-  line-height: 1;
-  font-family: var(--fuentePrincipal);
+  padding: 1rem 0;
+  font-size: 2rem;
+  text-decoration: overline;
+  
+  font-family: var(--cursiva);
+}
+
+@media (min-width: 768px){
+  .slogan p{
+    margin: 0;
+    font-size: 2.4rem;
+    line-height: 1;
+    font-family: var(--cursiva);
+  }
 }
 
 
