--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,13 @@ body{
   font-family: var(--fuentePrincipal);
   font-size: 1.6rem;
   line-height: 1.8;
+  background-color: #f5f4f4;
 
 }
 
 h1,h2,h3{
   font-weight: 900;
-  margin: 1rem 0 4rem 0;
+  margin: 1rem 0 2rem 0;
 }
 
 h1{
@@ -28,11 +29,15 @@ h1{
 }
 
 h2{
-  font-size: 5.8rem;
+  font-size: 2rem;
 }
 
 h3{
-  font-size: 5rem;
+  font-size: 1.5rem;
+}
+p{
+  font-size: 1rem;
+   
 }
 
 a{
@@ -288,4 +293,148 @@ img{
 
 
  
+/* ----Nosotros ------ */
+
+.nosotros{
+  margin-top: 1rem;
+  display: grid;
+  grid-template-rows: repeat(2,1fr);
+  background-image: url(./img/nosotros.jpg);
+  background-repeat: no-repeat;
+  background-position: bottom;
+}
+
+@media (min-width: 768px){
+  .nosotros{
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+
+.contenido-nosotros{
+  background-color: white;
+  border: 1px solid rgb(216, 215, 215);
+  border-radius: 10px;
+  padding:0 10px ;
+}
+
+@media (min-width: 768px){
+  .contenido-nosotros{
+    padding: 3rem 6rem;
+    grid-column: 2 / 4;
+     
+  }
+}
+
+.contenido-nosotros h2{
+  margin-bottom: 1rem;
+  
+}
+
+.contenido-nosotros p{
+  margin-bottom: 1rem;
+
+}
+
+
+
+
+/* ---  Modelos ---- */
+
+
  
+
+ .modelo{
+  width: 100%;
+  margin: 0 auto;
+  margin-left: 10px;
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 1rem;
+  padding-bottom: 3rem;
+   
+   
+}
+
+@media (min-width: 1200px){
+  .modelo{
+    width: 80%;
+    
+    margin: 0 auto;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.titulo-modelo{
+  text-align: center;
+  text-decoration: underline;
+}
+
+.contenido-modelo{
+  
+  align-items: center; 
+  padding:0.5rem 1em ;
+  
+}
+
+@media (min-width: 1200px){
+  .contenido-modelo{
+    text-align: end;
+    margin-top: 2rem;
+  }
+}
+
+
+
+
+.contenedorImg {
+  overflow:hidden;
+  width: 90%;
+  /* border-radius: 20%; */
+  border-bottom-left-radius: 45px;
+   
+}
+
+.contenedorImg:hover{
+   
+box-shadow: 0px 0px 15px 15px #c0e6f0;
+-webkit-box-shadow: 0px 0px 15px 15px #c7c9ca;
+}
+
+
+.imagen{
+  border-bottom-left-radius: 45px;
+  transition-duration: .5s;
+  
+  
+}
+
+
+.contenedorImg:hover .imagen {
+  -webkit-transform:scale(1.3);
+  transform:scale(1.5);
+  
+  
+
+}
+ 
+ 
+
+.premier{
+  
+  
+}
+
+.elite{
+   
+
+}
+
+.enlace-modelo{
+  color: black;
+  font-weight: 500;
+  border: 1px solid rgb(194, 194, 194);
+  padding: 5px;
+  width: 30%;
+}
