--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,8 @@ h1{
 
 h2{
   font-size: 2rem;
+  text-align: center;
+  text-decoration: underline;
 }
 
 h3{
@@ -366,10 +368,7 @@ img{
   }
 }
 
-.titulo-modelo{
-  text-align: center;
-  text-decoration: underline;
-}
+ 
 
 .contenido-modelo{
   
@@ -410,26 +409,12 @@ box-shadow: 0px 0px 15px 15px #c0e6f0;
   
 }
 
-
 .contenedorImg:hover .imagen {
   -webkit-transform:scale(1.3);
   transform:scale(1.5);
-  
-  
 
 }
  
- 
-
-.premier{
-  
-  
-}
-
-.elite{
-   
-
-}
 
 .enlace-modelo{
   color: black;
@@ -437,4 +422,152 @@ box-shadow: 0px 0px 15px 15px #c0e6f0;
   border: 1px solid rgb(194, 194, 194);
   padding: 5px;
   width: 30%;
+}
+
+
+/* --- galeria --- */
+
+.galeria{
+  
+  padding-bottom: 1rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: .5rem;
+}
+
+ 
+
+@media (min-width: 768px){
+  .galeria{
+    grid-template-columns: repeat(3, 1fr);
+
+  }
+}
+
+.galeria img{
+  object-fit: cover;
+   height: 100%;
+}
+
+ 
+
+.galeria .galeria-imagen:nth-child(2){
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
+}
+@media (min-width: 768px){
+  .galeria .galeria-imagen:nth-child(2){
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+  }
+}
+
+.galeria .galeria-imagen:nth-child(3){
+  grid-row: 3 / 5;
+  grid-column: 2 / 3;
+}
+
+@media (min-width: 768px){
+  .galeria .galeria-imagen:nth-child(3){
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+}
+
+.galeria .galeria-imagen:nth-child(6){
+  grid-row: 2 / 4;
+}
+
+@media (min-width: 768px){
+  .galeria .galeria-imagen:nth-child(6){
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+  }
+}
+ 
+
+ 
+
+/* --- footer --- */
+
+.footer{
+  height: 30rem;
+  margin-bottom: 1rem;
+  background-image: url(./img/footer_bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
+@media (min-width: 768px){
+  .footer{
+    height: 15rem;
+  }
+}
+
+@media (min-width: 1200px){
+  .footer{
+    height: 17rem;
+  }
+}
+
+
+
+.footer-nombre-sitio{
+  font-size: 1.6rem;
+}
+
+.footer a{
+  margin: 0;
+  font-size: 1.7rem;
+}
+
+.footer-barra{
+  
+  margin:0 2rem ;
+  padding-top: .5rem;
+
+}
+
+
+
+@media (min-width: 768px){
+  .footer-barra{
+  
+    margin:0 2rem ;
+    padding-top: .5rem;
+  
+  }
+  .footer .navegacion a{
+    margin:0 .6rem ;
+    font-size: 1rem;
+    padding: .2rem ;
+  } 
+}
+
+.footer-telefono{
+  font-size: 1.5rem;
+}
+
+.copyright{
+  color: white;
+  text-align: center;
+  padding:2rem 0 ;
+  font-size: 1rem;
+}
+
+@media (min-width: 768px){
+  .copyright{
+    
+    padding:4rem 0 ;
+    
+  }
+}
+
+@media (min-width: 1200px){
+  .copyright{
+    
+    padding:6rem 0 ;
+    
+  }
 }
